--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1231,6 +1231,8 @@ background-color: #E8B720;
   border-radius: 30px;
   box-shadow: none;
   font-weight: 700;
+  width: 200px;
+  margin-left: 35%;
 
 }
 .btn.btn-primary:hover {
@@ -1327,6 +1329,9 @@ background-color: #E8B720;
      margin-left: 15%;
      margin-right: 15%;
    }
+   .btn.btn-primary {
+     margin-left: 25%;
+   }
   }
 
  @media screen and (max-width: 992px) {
@@ -1370,6 +1375,9 @@ background-color: #E8B720;
    margin-right: 5%;
    margin-left: 5%;
  }
+ .btn.btn-primary {
+  margin-left: 15%;
+}
  } 
 
  /* Footer */
